--- a/Contact.html
+++ b/Contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <h1>Get in touch</h1>
-    <p>If you want to contact me then do so in the below form</p>
+    <p>If you want to contact me then do so in the below</p>
 </head>
 <body>
     
